// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIndemnite 2k, 6ans d'ancienneté, 61ans, cadre, retraite possible 1`] = `
Object {
  "formula": "2 / 5 * Sref * Dc + 3 / 10 * Sref * Dt  - \\"minoration\\"",
  "labels": Object {
    "Catégorie": "cadre",
    "Durée comme cadre, en mois, (Dc)": 60,
    "En âge de partir à la retraite": "oui",
    "Salaire de référence (Sref)": 2000,
    "durée comme TAM, en mois, (Dt)": 12,
    "majoration": 0,
    "minoration": 920,
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, 61ans, cadre, retraite possible 1`] = `
Object {
  "formula": "2 / 5 * Sref * Dc + 3 / 10 * Sref * Dt",
  "labels": Object {
    "Catégorie": "cadre",
    "Durée comme cadre, en mois, (Dc)": 120,
    "En âge de partir à la retraite": "oui",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, 61ans, cadre, retraite possible 2`] = `
Object {
  "formula": "2 / 5 * Sref * Dc + 3 / 10 * Sref * Dt  + \\"majoration\\" - \\"minoration\\"",
  "labels": Object {
    "Catégorie": "cadre",
    "Durée comme cadre, en mois, (Dc)": 120,
    "En âge de partir à la retraite": "oui",
    "Salaire de référence (Sref)": 2000,
    "durée comme TAM, en mois, (Dt)": 5,
    "majoration": 4000,
    "minoration": 6600,
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, 55ans, ouvrier 1`] = `
Object {
  "formula": "-",
  "labels": Object {
    "Ancienneté totale, en année, (A)": 1,
    "Catégorie": "ouvrier",
    "En âge de partir à la retraite": "non",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 24mois d'ancienneté, 55ans, TAM 1`] = `
Object {
  "formula": "1/10 * Sref * A",
  "labels": Object {
    "Ancienneté totale, en année, (A)": 2,
    "Catégorie": "tam",
    "En âge de partir à la retraite": "non",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 24mois d'ancienneté, 55ans, cadre 1`] = `
Object {
  "formula": "-",
  "labels": Object {
    "Ancienneté totale, en année, (A)": 2,
    "Catégorie": "cadre",
    "En âge de partir à la retraite": "non",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 24mois d'ancienneté, 55ans, ouvrier 1`] = `
Object {
  "formula": "1/10 * Sref * A",
  "labels": Object {
    "Ancienneté totale, en année, (A)": 2,
    "Catégorie": "ouvrier",
    "En âge de partir à la retraite": "non",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 24mois d'ancienneté, 61ans, ouvrier, retraite possible 1`] = `
Object {
  "formula": "1/10 * Sref * A  - \\"minoration\\"",
  "labels": Object {
    "Ancienneté totale, en année, (A)": 2,
    "Catégorie": "ouvrier",
    "En âge de partir à la retraite": "oui",
    "Salaire de référence (Sref)": 2000,
    "majoration": 0,
    "minoration": 80,
  },
}
`;

exports[`getIndemnite 2k, 36mois d'ancienneté, 55ans, TAM 1`] = `
Object {
  "formula": "3/10 * Sref * A",
  "labels": Object {
    "Ancienneté totale, en année, (A)": 3,
    "Catégorie": "tam",
    "En âge de partir à la retraite": "non",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 36mois d'ancienneté, 55ans, cadre 1`] = `
Object {
  "formula": "2 / 5 * Sref * Dc + 3 / 10 * Sref * Dt",
  "labels": Object {
    "Catégorie": "cadre",
    "Durée comme cadre, en mois, (Dc)": 24,
    "En âge de partir à la retraite": "non",
    "Salaire de référence (Sref)": 2000,
    "durée comme TAM, en mois, (Dt)": 12,
  },
}
`;

exports[`getIndemnite 2k, 36mois d'ancienneté, 55ans, ouvrier 1`] = `
Object {
  "formula": "2/10 * Sref * A",
  "labels": Object {
    "Ancienneté totale, en année, (A)": 3,
    "Catégorie": "ouvrier",
    "En âge de partir à la retraite": "non",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 36mois d'ancienneté, 61ans, cadre, retraite possible 1`] = `
Object {
  "formula": "2 / 5 * Sref * Dc + 3 / 10 * Sref * Dt  - \\"minoration\\"",
  "labels": Object {
    "Catégorie": "cadre",
    "Durée comme cadre, en mois, (Dc)": 24,
    "En âge de partir à la retraite": "oui",
    "Salaire de référence (Sref)": 2000,
    "durée comme TAM, en mois, (Dt)": 12,
    "majoration": 0,
    "minoration": 440,
  },
}
`;
